Added topmenu bar still need position and font size on madeup Etsy logo

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
           <a href="#">Etsy</a>
         </div>
         <div class="searchbar">
-          <input class="search" type="search" value="Search for items or shops">
+          <input class="search" type="search" placeholder="Search for items or shops">
           <input class="button" type="button" value="Search">
         </div>
         <div class="linksnsignin">
           <ul class="account">
-            <li><a href="#">Sell on Etsy</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#" class="login">Sign in</a></li>
-            <li><a href="#">Cart</a></li>
+            <li class="selling"><a href="#"><span class="sell">Sell on Etsy<span></a></li>
+            <li class="register"><a href="#">Register</a></li>
+            <li class="login"><a href="#" class="login1">Sign in</a></li>
+            <li class="shop"><a href="#" class="cart"><span class="cartword">Cart</span></a></li>
+            <li class="imgsrc1"><img class="rollin" src="images/cart.png"></li>
           </ul>
         </div>
       </div>
