Completed the first Header bar menu, working on outline of the 2nd menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header">
       <div class="topcontent1">
         <div class="logo">
-          <a href="#">Etsy</a>
+          <a href="#"><img src="images/etsylogo.png"></a>
         </div>
         <div class="searchbar">
           <input class="search" type="search" placeholder="Search for items or shops">
@@ -31,10 +31,6 @@
 
   
 <!--   <div class="container"></div> -->
-
-<img src="">
-
-
 
 <script type="text/template" id="itemTemplate">
   <div>
