Links addes with placeholder text moving on to side menus

--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
       </div>
     </div>
   </div>
+  <div class="menubelow">
+    <div class="insidemenu">
+      <a href="#">Placeholder</a>
+      <a href="#">Placeholder</a>
+      <a href="#">Placeholder</a>
+      <a href="#">Placeholder</a>
+      <a href="#">Placeholder</a>
+      <a href="#">Placeholder</a>
+      <a href="#">Placeholder</a>
+      <a href="#">Placeholder</a>
+      
+    
+
+    </div>  
+  </div>
 
   
 <!--   <div class="container"></div> -->
