--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <li class="selling"><a href="#"><span class="sell">Sell on Etsy<span></a></li>
             <li class="register"><a href="#">Register</a></li>
             <li class="login"><a href="#" class="login1">Sign in</a></li>
-            <li class="shop"><a href="#" class="cart"><span class="cartword">Cart</span></a></li>
-            <li class="imgsrc1"><img class="rollin" src="images/cart.png"></li>
+            <li class="shop"><a href="#" class="cart"><img class="rollin" src="images/cart.png"><span class="cartword">Cart</span></a></li>
+            
           </ul>
         </div>
       </div>
