Replaced placeholders on top menu

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
   </div>
   <div class="menubelow">
     <div class="insidemenu">
-      <a href="#">Placeholder</a>
-      <a href="#">Placeholder</a>
-      <a href="#">Placeholder</a>
-      <a href="#">Placeholder</a>
-      <a href="#">Placeholder</a>
-      <a href="#">Placeholder</a>
-      <a href="#">Placeholder</a>
-      <a href="#">Placeholder</a>
+      <a href="#">Clothing & Accessories</a>
+      <a href="#">Jewelry</a>
+      <a href="#">Craft Supplies & Tools</a>
+      <a href="#">Weddings</a>
+      <a href="#">Entertainment</a>
+      <a href="#">Home & Living</a>
+      <a href="#">Kids & Baby</a>
+      <a href="#">Vintage</a>
       
     
 
