adding menus on the left side still need to adjust positions

--- a/index.html
+++ b/index.html
@@ -44,7 +44,44 @@
 
   <div class="belowcontent">
     <div class="content">
-      
+      <div class="clearbar">
+        </div>
+      <div class="allmenus">
+        <div class="firstmenu">
+          <h3 class="showresults">Show results for:</h3>
+          <div class="menuone">
+            <span class="allcats">All Categories</span>
+            <ul>
+              <li><a href="#">Placeholder</a></li>
+              <li><a href="#">Placeholder</a></li>
+              <li><a href="#">Placeholder</a></li>
+              <li><a href="#">Placeholder</a></li>
+              <li><a href="#">Placeholder</a></li>
+              <li><a href="#">Placeholder</a></li>
+              <li><a href="#">Placeholder</a></li>
+              <li><a href="#">Placeholder</a></li>
+              <li><a href="#">Placeholder</a></li>
+            </ul>
+          </div>
+          <h3 class="refineresults">Refine your search</h3>
+          <div class="menutwo">
+            <div class="radiobuttons">
+              <span class="itype">Item type</span>
+              <ul>
+                <li><label class="bubbles"><input class="radio" type="radio"><a href="#">Placeholder</a>
+                </label></li>
+                <li><label class="bubbles"><input class="radio" type="radio"><a href="#">Placeholder</a> 
+                </label></li>
+                <li><label class="bubbles"><input class="radio" type="radio"><a href="#">Placeholder</a>
+                </label></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="piccontent">
+        
+      </div>
     </div>
   </div>
 
