Adding more inputs on menu on the left

--- a/index.html
+++ b/index.html
@@ -74,7 +74,16 @@
                 </label></li>
                 <li><label class="bubbles"><input class="radio" type="radio"><a href="#">Placeholder</a>
                 </label></li>
-              </ul>
+              </ul> 
+            <div class="priceinput">
+              <h3 class="priceline">Price</h3>
+              <div class="inputprices">
+                <input type="text" placeholder="Low" class="hi"></input>
+                <span>to</span>
+                <input type="text" placeholder="High" class="lo"></input>
+                <input type="button" value="▹" class="pricebut"></input>
+              </div>
+            </div>
             </div>
           </div>
         </div>
