--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="firstmenu">
           <h3 class="showresults">Show results for:</h3>
           <div class="menuone">
-            <span class="allcats">All Categories</span>
+            <h3 class="headings">All Categories</h3>
             <ul>
               <li><a href="#">Placeholder</a></li>
               <li><a href="#">Placeholder</a></li>
@@ -66,7 +66,7 @@
           <h3 class="refineresults">Refine your search</h3>
           <div class="menutwo">
             <div class="radiobuttons">
-              <span class="itype">Item type</span>
+              <h3 class="headings">Item type</h3>
               <ul>
                 <li><label class="bubbles"><input class="radio" type="radio"><a href="#">Placeholder</a>
                 </label></li>
@@ -75,15 +75,51 @@
                 <li><label class="bubbles"><input class="radio" type="radio"><a href="#">Placeholder</a>
                 </label></li>
               </ul> 
+            </div>
             <div class="priceinput">
-              <h3 class="priceline">Price</h3>
+              <h3 class="headings">Price</h3>
               <div class="inputprices">
-                <input type="text" placeholder="Low" class="hi"></input>
+                <input type="text" placeholder="$Low" class="lo"></input>
                 <span>to</span>
-                <input type="text" placeholder="High" class="lo"></input>
-                <input type="button" value="▹" class="pricebut"></input>
+                <input type="text" placeholder="$High" class="hi"></input>
+                <button class="pricebut"><span class="buticon"></span></button>
               </div>
             </div>
+            <div class="filtercolor">
+              <h3 class="headings">Filter by color</h3>
+              <ul class="clrlist">
+                <li class="redstuff"><a href="#"><span>&nbsp</span></a></li>
+                <li class="orangestuff"><a href="#"><span>&nbsp</span></a></li>
+                <li class="yellowstuff"><a href="#"><span>&nbsp</span></a></li>
+                <li class="greenstuff"><a href="#"><span>&nbsp</span></a></li>
+                <li class="bluestuff"><a href="#"><span>&nbsp</span></a></li>
+                <li class="purplestuff"><a href="#"><span>&nbsp</span></a></li>
+                <li class="blackstuff"><a href="#"><span>&nbsp</span></a></li>
+                <li class="whitestuff"><a href="#"><span>&nbsp</span></a></li>
+              </ul>
+            </div>
+            <div class="orderoptions">
+              <h3 class="headings">Ordering Options</h3>
+              <ul class="theoptions">
+              <li><input class="checkbox" type="checkbox"><a href="#">Accepts Etsy Gift Cards</a></input></li>
+              <li><input class="checkbox" type="checkbox"><a href="#">Customizable</a></input></li>
+              </ul>
+            </div>
+            <div class="orderoptions">
+              <h3 class="headings">Shopping Location</h3>
+              <ul class="theoptions">
+              <li><input class="radio" type="radio"><a href="#">Anywhere</a></input></li>
+              <li><input class="radio" type="radio"><a href="#">United States</a></input></li>
+              <li><a href="#">Choose a custom location</a></li>
+              </ul>
+            </div>
+            <div class="orderoptions">
+              <h3 class="headings">Ship To</h3>
+              <select class="selctions">
+                <option value="US">United States</option>
+              </select>
+              
+            </div>            
             </div>
           </div>
         </div>
