Placeholders removed more editing to come

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
           <div class="menuone">
             <h3 class="headings">All Categories</h3>
             <ul>
-              <li><a href="#">Placeholder</a></li>
-              <li><a href="#">Placeholder</a></li>
-              <li><a href="#">Placeholder</a></li>
-              <li><a href="#">Placeholder</a></li>
-              <li><a href="#">Placeholder</a></li>
-              <li><a href="#">Placeholder</a></li>
-              <li><a href="#">Placeholder</a></li>
-              <li><a href="#">Placeholder</a></li>
-              <li><a href="#">Placeholder</a></li>
+              <li><a href="#">Home & Living</a></li>
+              <li><a href="#">Art & Collectibles</a></li>
+              <li><a href="#">Craft Supplies & Tools</a></li>
+              <li><a href="#">Electronics & Accessories</a></li>
+              <li><a href="#">Paper & Party Supplies</a></li>
+              <li><a href="#">Bags & Purses</a></li>
+              <li><a href="#">Accessories</a></li>
+              <li><a href="#">Jewelry</a></li>
+              <li><a href="#">Toys & Games</a></li>
             </ul>
           </div>
           <h3 class="refineresults">Refine your search</h3>
@@ -68,11 +68,11 @@
             <div class="radiobuttons">
               <h3 class="headings">Item type</h3>
               <ul>
-                <li><label class="bubbles"><input class="radio" type="radio"><a href="#">Placeholder</a>
+                <li><label class="bubbles"><input class="radio" type="radio"><a href="#">All Items</a>
                 </label></li>
-                <li><label class="bubbles"><input class="radio" type="radio"><a href="#">Placeholder</a> 
+                <li><label class="bubbles"><input class="radio" type="radio"><a href="#">Handmade</a> 
                 </label></li>
-                <li><label class="bubbles"><input class="radio" type="radio"><a href="#">Placeholder</a>
+                <li><label class="bubbles"><input class="radio" type="radio"><a href="#">Vintage</a>
                 </label></li>
               </ul> 
             </div>
