--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
       <div class="piccontent">
         <div class="topofmain">
           <div class="leftside">
-          <a href="#">All Catergories</a><span> > "computer chair" (161 results)</span>  
+          <a href="#" class="bluetext">All Catergories</a><span> > "computer chair" (161 results)</span>  
           </div>
           <div class="rightside">
-          <span>Sort by: <a href="#">Relevancy</a></span>
+          <span>Sort by: <a href="#" class="bluetext">Relevancy</a></span>
           </div>
          </div>
          <div class="container"></div>
